2006-03-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.17.1.

2006-03-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on GLib 2.9.1 onwards for GSlice.

2006-03-06  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.17.

2006-03-06  Ross Burton  <ross@burtonini.com>

	* src/e-sexp.h:
	* src/e-sexp.c:
	Port to use GSlice rather than GMemChunk.

2005-11-02  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.16.

2005-10-21  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Fix undecorate action (Mikachu).

2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Handle OpenBox specially when undecorating.

2005-10-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.15.

2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/matchers.c:
	Protect against returning NULL, return empty string instead.

2005-10-19  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Wrap X calls when removing decorations with error pop/push.

2005-10-19  Ross Burton  <ross@burtonini.com>

	* src/e-sexp.c:
	Fix segfault when disposing (Christian Krause).

2005-10-18  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	* src/actions.h:
	Add focus and center actions.

	* src/matchers.c:
	* src/matchers.h:
	Add window class matcher.
	
	* src/parser.c:
	Update for new actions and matcher (patch from Jonas J Linde).

2005-10-17  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	* src/actions.h:
	* src/parser.c:
	Add Print action (Ryan Koppenhaver)

2005-10-17  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	* src/actions.h:
	* src/parser.c:
	Add Close action (Ryan Koppenhaver)

2005-10-17  Ross Burton  <ross@burtonini.com>

	* src/sexp-test.c:
	* tests/not-false.ds:
	* tests/not-true.ds:
	Fix the test suite (Ryan Koppenhaver)

2005-10-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.14.

2005-10-17  Ross Burton  <ross@burtonini.com>
